--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bulma": "^0.6.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
